--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-router/serve": "^7.7.0",
     "clsx": "^2.1.1",
     "isbot": "^5.1.27",
+    "lucide-react": "^0.526.0",
     "pdfjs-dist": "^5.3.93",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
